<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.pages.recommendation.RecommendationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_recommendation"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="52dp"/>

        <ImageView
            android:id="@+id/image_flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginEnd="@dimen/twenty"
            android:layout_marginBottom="@dimen/four"
            android:contentDescription="@string/start"
            android:scaleType="fitCenter"
            android:src="@drawable/flower" />

        <TextView
            android:id="@+id/text_desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_recommendation1"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/desc_recommendation2"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_eight"
            android:text="@string/start"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>